// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountBackupStep1 Snapshots android render matches snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 42,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingTop": 42,
      }
    }
    testID="protect-your-account-screen"
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Step 2 of 3
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "marginBottom": 10,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "color": "#131416",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                  "marginBottom": 16,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
          >
            Secure your wallet
          </Text>
          <Image
            source={1}
            style={
              {
                "height": 250,
                "marginLeft": "auto",
                "marginRight": "auto",
                "width": 250,
              }
            }
          />
          <View
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "display": "flex",
                  "marginTop": 32,
                  "rowGap": 16,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              Don’t risk losing your funds. Protect your wallet by saving your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
                testID="seedphrase-link"
              >
                Secret Recovery Phrase
              </Text>
               
              in a place you trust.
               
            </Text>
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              It’s the only way to recover your wallet if you get locked out of the app or get a new device.
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "display": "flex",
                "marginBottom": 24,
                "marginTop": "auto",
                "rowGap": 16,
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="Get started"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#131416",
                  "borderRadius": 12,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Get started
            </Text>
          </View>
          <View
            accessibilityLabel="Remind me later"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
            testID="remind-me-later-button"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#131416",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Remind me later
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`AccountBackupStep1 Snapshots android render matches snapshot with status bar height to zero 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 24,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingTop": 24,
      }
    }
    testID="protect-your-account-screen"
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Step 2 of 3
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "marginBottom": 10,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "color": "#131416",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                  "marginBottom": 16,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
          >
            Secure your wallet
          </Text>
          <Image
            source={1}
            style={
              {
                "height": 250,
                "marginLeft": "auto",
                "marginRight": "auto",
                "width": 250,
              }
            }
          />
          <View
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "display": "flex",
                  "marginTop": 32,
                  "rowGap": 16,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              Don’t risk losing your funds. Protect your wallet by saving your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
                testID="seedphrase-link"
              >
                Secret Recovery Phrase
              </Text>
               
              in a place you trust.
               
            </Text>
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              It’s the only way to recover your wallet if you get locked out of the app or get a new device.
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "display": "flex",
                "marginBottom": 24,
                "marginTop": "auto",
                "rowGap": 16,
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="Get started"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#131416",
                  "borderRadius": 12,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Get started
            </Text>
          </View>
          <View
            accessibilityLabel="Remind me later"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
            testID="remind-me-later-button"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#131416",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Remind me later
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`AccountBackupStep1 Snapshots iOS render matches snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 8,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingTop": 8,
      }
    }
    testID="protect-your-account-screen"
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Step 2 of 3
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "marginBottom": 10,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "color": "#131416",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                  "marginBottom": 16,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
          >
            Secure your wallet
          </Text>
          <Image
            source={1}
            style={
              {
                "height": 250,
                "marginLeft": "auto",
                "marginRight": "auto",
                "width": 250,
              }
            }
          />
          <View
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "display": "flex",
                  "marginTop": 32,
                  "rowGap": 16,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              Don’t risk losing your funds. Protect your wallet by saving your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
                testID="seedphrase-link"
              >
                Secret Recovery Phrase
              </Text>
               
              in a place you trust.
               
            </Text>
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              It’s the only way to recover your wallet if you get locked out of the app or get a new device.
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "display": "flex",
                "marginBottom": 16,
                "marginTop": "auto",
                "rowGap": 16,
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="Get started"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#131416",
                  "borderRadius": 12,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Get started
            </Text>
          </View>
          <View
            accessibilityLabel="Remind me later"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
            testID="remind-me-later-button"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#131416",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Remind me later
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`AccountBackupStep1 Theme appearance renders dark SRP design image by default (dark theme) 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 42,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingTop": 42,
      }
    }
    testID="protect-your-account-screen"
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Step 2 of 3
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "marginBottom": 10,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "color": "#131416",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                  "marginBottom": 16,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
          >
            Secure your wallet
          </Text>
          <Image
            source={1}
            style={
              {
                "height": 250,
                "marginLeft": "auto",
                "marginRight": "auto",
                "width": 250,
              }
            }
          />
          <View
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "display": "flex",
                  "marginTop": 32,
                  "rowGap": 16,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              Don’t risk losing your funds. Protect your wallet by saving your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
                testID="seedphrase-link"
              >
                Secret Recovery Phrase
              </Text>
               
              in a place you trust.
               
            </Text>
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              It’s the only way to recover your wallet if you get locked out of the app or get a new device.
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "display": "flex",
                "marginBottom": 24,
                "marginTop": "auto",
                "rowGap": 16,
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="Get started"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#131416",
                  "borderRadius": 12,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Get started
            </Text>
          </View>
          <View
            accessibilityLabel="Remind me later"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
            testID="remind-me-later-button"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#131416",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Remind me later
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`AccountBackupStep1 Theme appearance renders light SRP design image for light theme 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "paddingTop": 42,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingTop": 42,
      }
    }
    testID="protect-your-account-screen"
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#66676a",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          Step 2 of 3
        </Text>
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexGrow": 1,
                "flexShrink": 1,
                "marginBottom": 10,
              },
              undefined,
            ]
          }
        >
          <Text
            accessibilityRole="text"
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "color": "#131416",
                  "fontFamily": "Geist-SemiBold",
                  "fontSize": 32,
                  "letterSpacing": 0,
                  "lineHeight": 40,
                  "marginBottom": 16,
                  "textAlign": "left",
                },
                undefined,
              ]
            }
          >
            Secure your wallet
          </Text>
          <Image
            source={1}
            style={
              {
                "height": 250,
                "marginLeft": "auto",
                "marginRight": "auto",
                "width": 250,
              }
            }
          />
          <View
            style={
              [
                {
                  "alignSelf": "flex-start",
                  "display": "flex",
                  "marginTop": 32,
                  "rowGap": 16,
                },
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              Don’t risk losing your funds. Protect your wallet by saving your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    {
                      "color": "#4459ff",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
                testID="seedphrase-link"
              >
                Secret Recovery Phrase
              </Text>
               
              in a place you trust.
               
            </Text>
            <Text
              accessibilityRole="text"
              style={
                [
                  {
                    "color": "#66676a",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                  undefined,
                ]
              }
            >
              It’s the only way to recover your wallet if you get locked out of the app or get a new device.
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "display": "flex",
                "marginBottom": 24,
                "marginTop": "auto",
                "rowGap": 16,
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="Get started"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#131416",
                  "borderRadius": 12,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Get started
            </Text>
          </View>
          <View
            accessibilityLabel="Remind me later"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#b4b4b528",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "columnGap": 8,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "minWidth": 80,
                  "opacity": 1,
                  "overflow": "hidden",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "width": "100%",
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
            testID="remind-me-later-button"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#131416",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Remind me later
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
